--- a/pages/style.css
+++ b/pages/style.css
@@ -72,6 +72,11 @@ body header .head-top select option:checked {
 }
 
 
+#offre-barre{
+    color:inherit;
+}
+
+
 /* FINHeaderTOP */
 
 /* HeaderPrincipal */
@@ -2279,22 +2284,6 @@ body .panier .container-panier .recap #recap-button-payer:hover{
 
 /* FIN Confirmation_commande */
 
-/* 404*/
-
-.vide {
-    width: 70%;
-    margin-top: 30px;
-    background-color: rgba(0, 0, 0, 0.942);
-    padding-right: 100%;
-}
-
-.vide img {
-    width: 100%;
-    margin-left: 21%;
-}
-
-/* FIN 404 */
-
 
 /* Responsive */
 
@@ -2519,5 +2508,18 @@ body .panier .container-panier .recap #recap-button-payer:hover{
 
 
 
+/* 404*/
 
+.vide {
+    width: 70%;
+    margin-top: 30px;
+    background-color: rgba(0, 0, 0, 0.942);
+    padding-right: 100%;
+}
 
+.vide img {
+    width: 100%;
+    margin-left: 21%;
+}
+
+/* FIN 404 */
